--- a/backend/postgre/Dockerfile
+++ b/backend/postgre/Dockerfile
@@ -6,28 +6,28 @@
 #    By: mguerga <mguerga@42lausanne.ch>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/12 19:25:50 by mguerga           #+#    #+#              #
-#    Updated: 2024/07/16 10:46:04 by mguerga          ###   ########.fr        #
+#    Updated: 2024/07/18 11:44:58 by lzito            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 FROM alpine:3.20.1
 
 RUN apk update && \
-	apk add --no-cache py3-django py3-psycopg py3-psycopg2
+	apk add --no-cache postgresql16 py3-psycopg && \
+	adduser -D post_user && \
+	mkdir -p /run/postgresql/ && \
+	chown post_user:post_user /run/postgresql/
 
-#git clone git://github.com/zostera/django-bootstrap5.git
-RUN	django-admin startproject mysite && \
-	cd mysite && chmod 744 manage.py
+USER post_user
 
-COPY settings.py /mysite/mysite/.
-COPY django_init.sh /mysite/.
-COPY urls.py /mysite/mysite/.
+RUN mkdir -p /home/post_user/postDB/ && \
+	touch /home/post_user/post.log && \
+	pg_ctl init -D home/post_user/postDB/ -l /home/post_user/post.log && \
+	ln -sf /dev/stdout /home/post_user/post.log
 
+COPY pg_hba.conf /home/post_user/postDB/.
+COPY postgresql.conf /home/post_user/postDB/.
 
-#EXPOSE 5432
+EXPOSE 5432
 
-RUN touch debug.log && ln -sf /dev/stdout ./debug.log 
-
-WORKDIR /mysite
-
-CMD ["sh", "django_init.sh"]
+CMD ["postgres16", "-D", "/home/post_user/postDB", "-h", "*" ]
