postgres image built it in 2 times also and uses it's own server_init, it's better to start from scratch. this seems to work still need to check that postgre is secure

--- a/backend/postgres/dockerfile
+++ b/backend/postgres/dockerfile
@@ -6,28 +6,34 @@
 #    By: mguerga <mguerga@42lausanne.ch>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/12 19:25:50 by mguerga           #+#    #+#              #
-#    Updated: 2024/07/18 11:44:58 by lzito            ###   ########.fr        #
+#    Updated: 2024/07/30 13:04:55 by mguerga          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 FROM alpine:3.20.1
 
 RUN apk update && \
-	apk add --no-cache postgresql16 py3-psycopg && \
+	apk add --no-cache postgresql16 postgresql16-contrib && \
 	adduser -D post_user && \
 	mkdir -p /run/postgresql/ && \
 	chown post_user:post_user /run/postgresql/
 
 USER post_user
 
-RUN mkdir -p /home/post_user/postDB/ && \
-	touch /home/post_user/post.log && \
+RUN mkdir -p /home/post_user/postDB/
+
+
+RUN	touch /home/post_user/post.log && \
 	pg_ctl init -D home/post_user/postDB/ -l /home/post_user/post.log && \
 	ln -sf /dev/stdout /home/post_user/post.log
 
 COPY pg_hba.conf /home/post_user/postDB/.
 COPY postgresql.conf /home/post_user/postDB/.
+COPY post_init.sh /.
+
+WORKDIR /home/post_user/postDB/
 
 EXPOSE 5432
 
-CMD ["postgres16", "-D", "/home/post_user/postDB", "-h", "*" ]
+CMD ["sh", "/post_init.sh"]
+#CMD ["postgres16", "-D", "/home/post_user/postDB", "-i"]
