--- a/backend/postgres/postgresql.conf
+++ b/backend/postgres/postgresql.conf
@@ -57,7 +57,7 @@
 
 # - Connection Settings -
 
-listen_addresses = '*'		# what IP address(es) to listen on;
+#listen_addresses = '*'		# what IP address(es) to listen on;
 					# comma-separated list of addresses;
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
@@ -105,7 +105,7 @@ max_connections = 100			# (change requires restart)
 
 # - SSL -
 
-#ssl = off
+#ssl = on
 #ssl_ca_file = ''
 #ssl_cert_file = 'server.crt'
 #ssl_crl_file = ''
@@ -492,7 +492,7 @@ min_wal_size = 80MB
 
 # - When to Log -
 
-#log_min_messages = warning		# values in order of decreasing detail:
+log_min_messages = info		# values in order of decreasing detail:
 					#   debug5
 					#   debug4
 					#   debug3
