Update Game Menu display + change play keys to 'qaol'

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,13 @@ events {
 
 http {
 
+	 # If trying to access to non SSL connection
+    server {
+        listen 80;
+		server_name _;
+        return 301 https://$host$request_uri;
+    }
+
 	##
 	# Basic Settings
 	##
@@ -40,7 +47,7 @@ http {
 		ssl_certificate_key /etc/nginx/ssl/inception.key;
 
 		#root and index and server_name
-		root /var/www;
+		root /var/www/;
 		index /frontend/index.html;
 
 		# The underscore is a catch-all for server names (hostnames). 
