--- a/backend/postgres/pg_hba.conf
+++ b/backend/postgres/pg_hba.conf
@@ -115,5 +115,5 @@
 
 # "local" is for Unix domain socket connections only
 local   all             all                                     trust
-host    all             all             0.0.0.0/0					trust
+host    all             all             0.0.0.0/0				scram-sha-256	
 # IPv4 local connections:
