--- a/frontend/js/game/package.json
+++ b/frontend/js/game/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "three": "^0.166.1"
+    "three": "^0.166.1",
+    "ws": "^8.18.0"
   }
 }
