--- a/backend/nginx/dockerfile
+++ b/backend/nginx/dockerfile
@@ -1,21 +1,46 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    dockerfile                                         :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: mguerga <mguerga@42lausanne.ch>            +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/08/02 18:05:59 by mguerga           #+#    #+#              #
-#    Updated: 2024/08/05 12:16:29 by mguerga          ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
+# Use as base image
+FROM nginx:1.25
 
-FROM nginx:1.27.0-alpine 
+# Install necessary packages (Nginx and any dependencies)
+RUN apt-get update -y && apt-get upgrade -y
+RUN apt-get install -y nginx
 
-COPY create_certs.sh /.
+# Install SSL and setup the SSL certificate
+RUN mkdir -p /etc/nginx/ssl
+RUN apt-get install -y openssl
+RUN openssl req -x509 -nodes \
+						-out /etc/nginx/ssl/inception.crt \
+						-keyout /etc/nginx/ssl/inception.key \
+						-subj "/C=SW/ST=VD/L=Lausane/O=42/OU=42/CN=login.42.ch/emailAddress=login@student.42.fr"
+# =================================================
+# Openssl req explanation:
+# =================================================
+# openssl req: certificate request and certificate generating utility ( https://www.openssl.org/docs/man1.1.1/man1/req.html)
+# -x509: output a self-signed certificate instead of a certificate request
+# -nodes: if this option is specified then if a private key is created it will not be encrypted (no password)
+# -out: specifies the output filename to write to or standard output by default
+# -keyout: specifies the output filename to write the private key to
+# -subj: sets certificate subject
+# /C=SW: Country
+# /ST=VD: State
+# /L=Lausane: Location
+# /O=42: Organization
+# /OU=42: Organizational Unit
+# /CN=login.42.ch: Common Name
+# =================================================
 
-RUN apk add --no-cache openssl && \
-	rm /etc/nginx/conf.d/default.conf && \
-	sh /create_certs.sh	
+# Create necessary directories for nginx and frontend
+RUN mkdir -p /var/www/frontend/
+# RUN mkdir -p /var/www/backend/staticfiles/
 
-COPY nginx.conf /etc/nginx/conf.d/
+# Copy the conf file in conf directory to the /etc/nginx/ directory and overwrite the default configuration file
+COPY nginx.conf /etc/nginx/nginx.conf
+# Copy the .sh file from the tools directory to the /usr/local/ directory and give it execute permission
+COPY start_nginx.sh /usr/local/start_nginx.sh
+RUN chmod +x /usr/local/start_nginx.sh
+
+# Expose the port 443 for SSL
+EXPOSE 443
+
+# CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT [ "sh", "/usr/local/start_nginx.sh"]
