`chore: Update docker-compose.yaml for SSL certificate volume`

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@
 #    Updated: 2024/08/06 12:16:39 by mguerga          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
-
+#laulau le nullos ^^
 #version: '3.3' #PK ??
 services:
   postgres:
