--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@
 #    By: mguerga <mguerga@42lausanne.ch>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/14 11:40:19 by mguerga           #+#    #+#              #
-#    Updated: 2024/08/06 12:16:39 by mguerga          ###   ########.fr        #
+#    Updated: 2024/08/14 20:27:49 by mguerga          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 #laulau le nullos ^^
@@ -17,7 +17,7 @@ services:
     env_file: "./backend/.env"
     build: backend/postgres/
     volumes:
-      - db_vol:/var/lib/postgresql/data
+      - db_vol:/home/post_user/postDB/
     networks:
       - backend_nw
     restart: on-failure
