Request from Front to Back OK with Status 401 Unauthorized

--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -35,6 +35,10 @@ http {
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 
+	upstream mysite{
+    server django:8001;
+	}
+
 	server {
 
 		# listen on port 443 for incoming ipV4 connections
@@ -65,6 +69,27 @@ http {
 		location / {
 			try_files $uri $uri/ =404;
 		}
+
+		location /api/ {
+        proxy_pass https://mysite;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Referer $http_referer;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    	}
+
+		location /admin/ {
+        proxy_pass https://mysite;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+    	}
 
 		
 	}
