Change Django port to 8000, adding staticfiles, add ALLOWED_HOSTS, Add User profile Stats, change Local Game Menu Display, TO FIX : Game reset, Online messing with Local, staticfiles, Page reload

--- a/backend/nginx/dockerfile
+++ b/backend/nginx/dockerfile
@@ -32,6 +32,7 @@ RUN openssl req -x509 -nodes \
 # Create necessary directories for nginx and frontend
 RUN mkdir -p /var/www/frontend/
 # RUN mkdir -p /var/www/backend/staticfiles/
+RUN mkdir -p /var/www/backend/staticfiles/
 
 # Copy the conf file in conf directory to the /etc/nginx/ directory and overwrite the default configuration file
 COPY nginx.conf /etc/nginx/nginx.conf
