--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -13,8 +13,20 @@ http {
     server {
         listen 80;
 		server_name _;
-        return 301 https://$host$request_uri;
+        return 301 https://__TEMP_SERV__$request_uri;
     }
+
+	server {
+		listen 443 ssl http2;
+		listen [::]:443 ssl http2;
+
+		ssl_certificate /etc/nginx/ssl/inception.crt;
+		ssl_certificate_key /etc/nginx/ssl/inception.key;
+
+		if ($host = localhost) {
+			return 301 https://__TEMP_SERV__$request_uri;
+		}
+	}
 
 	##
 	# Basic Settings
@@ -36,7 +48,7 @@ http {
 	error_log /var/log/nginx/error.log;
 
 	upstream mysite{
-    server django:8001;
+    server django:8000;
 	}
 
 	server {
@@ -91,6 +103,9 @@ http {
         proxy_set_header X-Forwarded-Host $server_name;
     	}
 
+		location /static/ {
+        	alias /var/www/backend/staticfiles/;
+    	}
 		
 	}
 	include /etc/nginx/conf.d/*.conf;
