--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,8 @@ services:
     restart: on-failure
     depends_on:
       - postgres
+    ports:
+      - 8000:8000
 
   nginx:
     container_name: nginx 
@@ -38,12 +40,14 @@ services:
     networks:
       - backend_nw
     ports:
-      - "443:443"
+      - 80:80
+      - 443:443
     restart: on-failure
     depends_on:
       - django 
     volumes:
       - ./frontend/:/var/www/frontend/
+      - ./backend/staticfiles/:/var/www/backend/staticfiles/
       - ssl-certs:/etc/nginx/ssl
     
   game:
