Register OK getting data from back to front

--- a/backend/postgres/dockerfile
+++ b/backend/postgres/dockerfile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    dockerfile                                         :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mguerga <mguerga@42lausanne.ch>            +#+  +:+       +#+         #
+#    By: bkukaqi <bkukaqi@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/12 19:25:50 by mguerga           #+#    #+#              #
-#    Updated: 2024/08/12 15:00:23 by mguerga          ###   ########.fr        #
+#    Updated: 2024/08/22 16:18:37 by bkukaqi          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
