Reload Page Fix

--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -64,7 +64,7 @@ http {
 
 		#root and index and server_name
 		root /var/www/;
-		index frontend/index.html;
+		index /frontend/index.html;
 
 		# The underscore is a catch-all for server names (hostnames). 
 		# This means this server block will respond to all requests that do not match a server name in another server block.
@@ -78,9 +78,9 @@ http {
         # URI: Uniform Resource Identifier which is a string of characters used to identify a resource
         # $uri: current request URI ex: /index.php
         # $uri/: current request URI with a trailing slash ex: /index.php/
-		location / {
-			try_files $uri $uri/ =404;
-		}
+		# location / {
+		# 	try_files $uri $uri/ =404;
+		# }
 
 		location /api/ {
         proxy_pass https://mysite;
