--- a/backend/django/requirements.txt
+++ b/backend/django/requirements.txt
@@ -4,7 +4,8 @@ django-bootstrap5==24.2
 pyotp==2.9.0
 gunicorn==22.0.0
 djangorestframework==3.15.2
+django-oauth-toolkit==2.4.0
+django-cors-headers==4.4.0
 django-environ
-django-cors-headers
 pillow
 djangorestframework-simplejwt
