added tournaments model, needs tests

--- a/backend/django/Dockerfile
+++ b/backend/django/Dockerfile
@@ -6,7 +6,7 @@
 #    By: mguerga <mguerga@42lausanne.ch>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/12 19:25:50 by mguerga           #+#    #+#              #
-#    Updated: 2024/07/23 20:09:57 by lzito            ###   ########.fr        #
+#    Updated: 2024/08/29 18:28:04 by lzito            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,10 +24,12 @@ RUN	django-admin startproject mysite
 WORKDIR /mysite
 
 RUN python3 manage.py startapp players
+RUN python3 manage.py startapp tournaments
 RUN python3 manage.py startapp pong
 
 COPY ./mysite ./mysite
 COPY ./players ./players
 COPY ./pong ./pong
+COPY ./tournaments ./tournaments
 
 CMD ["bash","./mysite/django_init.sh"]
