Fix Friends requests max + Add Avatar change

--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -106,6 +106,13 @@ http {
 		location /static/ {
         	alias /var/www/backend/staticfiles/;
     	}
+		location /staticfiles/avatars/ {
+        	proxy_pass https://mysite;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header Referer $http_referer;
+			proxy_set_header Host $host;
+			proxy_redirect off;
+    	}
 		
 	}
 	include /etc/nginx/conf.d/*.conf;
