--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,11 +6,11 @@
 #    By: mguerga <mguerga@42lausanne.ch>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/14 11:40:19 by mguerga           #+#    #+#              #
-#    Updated: 2024/09/12 14:02:55 by mguerga          ###   ########.fr        #
+#    Updated: 2024/09/19 15:36:33 by lzito            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
-#laulau le nullos ^^
-#version: '3.3' #PK ??
+
+version: '3.3'
 services:
   postgres:
     container_name: postgres
@@ -66,7 +66,7 @@ services:
 
 networks:
   backend_nw:
-    name: backend_nw
+    #name: backend_nw
 
 volumes:
   db_vol:
