--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@
 #    By: mguerga <mguerga@42lausanne.ch>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/14 11:40:19 by mguerga           #+#    #+#              #
-#    Updated: 2024/09/19 15:36:33 by lzito            ###   ########.fr        #
+#    Updated: 2024/09/26 17:04:28 by mguerga          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -31,8 +31,6 @@ services:
     restart: on-failure
     depends_on:
       - postgres
-    ports:
-      - 8000:8000
 
   nginx:
     container_name: nginx 
